--- a/src/LetsFish.Server/appsettings.json
+++ b/src/LetsFish.Server/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LetsFishDatabase": "Server=localhost\\development;Database=LetsFish;Trusted_Connection=True;TrustServerCertificate=true"
+    "LetsFishDatabase": "Server=localhost\\development;Database=LetsFish;Trusted_Connection=True;TrustServerCertificate=true",
+    "LetsFishServerContextConnection": "Server=localhost\\development;Database=LetsFish;Trusted_Connection=True;TrustServerCertificate=true"
   }
 }
